# algorithmica-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: argmin.rs  binary_search.rs  entropy.rs  gcd.rs  matmul.rs  prefix_sum.rs  s_tree.rs
docs/: benchmarking.md
scripts/: perf_stat.sh
src/: argmin.rs  binary_search.rs  entropy.rs  gcd.rs  lib.rs  matmul.rs  prefix_sum.rs  s_tree.rs
