[package]
name = "hpc-algorithms"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "prefix_sum"
harness = false

[[bench]]
name = "gcd"
harness = false

[[bench]]
name = "argmin"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "binary_search"
harness = false

[[bench]]
name = "s_tree"
harness = false
